k8s/k8s_ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: django-profiles-restapi
  labels:  
   istio-injection: enabled
