k8s/k8s_gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: django-profiles-restapi-gateway
  namespace: django-profiles-restapi
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-django
      protocol: HTTP
    hosts:
    - "*"
